--- a/ensemble_model_2.ipynb
+++ b/ensemble_model_2.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
        "[180 rows x 1 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
        "Freq: M, dtype: float64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,10 +379,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from statsmodels.tsa.holtwinters import ExponentialSmoothing\n",
+    "\n",
+    "\n",
     "def triple_exp_smoothing_model(train, steps):\n",
     "    # create class\n",
     "    model = ExponentialSmoothing(train, \n",
@@ -401,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +425,7 @@
        "Freq: M, dtype: float64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,28 +621,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2017-01-31    1111.4\n",
-       "2017-02-28    1085.9\n",
-       "2017-03-31    1066.4\n",
-       "2017-04-30    1066.0\n",
-       "2017-05-31    1093.3\n",
-       "2017-06-30    1094.5\n",
-       "2017-07-31    1118.9\n",
-       "2017-08-31    1144.5\n",
-       "2017-09-30    1164.2\n",
-       "2017-10-31    1136.4\n",
-       "2017-11-30    1069.0\n",
-       "2017-12-31     978.7\n",
+       "2017-01-31    1095.5\n",
+       "2017-02-28    1105.9\n",
+       "2017-03-31    1148.8\n",
+       "2017-04-30    1127.5\n",
+       "2017-05-31    1122.6\n",
+       "2017-06-30    1065.6\n",
+       "2017-07-31    1063.0\n",
+       "2017-08-31    1065.3\n",
+       "2017-09-30    1103.2\n",
+       "2017-10-31    1138.4\n",
+       "2017-11-30    1012.4\n",
+       "2017-12-31     960.3\n",
        "Name: Incidents/Month, dtype: float64"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -682,28 +685,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2017-01-31    1141.8\n",
-       "2017-02-28    1125.7\n",
-       "2017-03-31    1132.2\n",
-       "2017-04-30    1118.3\n",
-       "2017-05-31    1114.2\n",
-       "2017-06-30    1108.5\n",
-       "2017-07-31    1112.4\n",
-       "2017-08-31    1113.7\n",
-       "2017-09-30    1113.2\n",
-       "2017-10-31    1120.6\n",
-       "2017-11-30    1016.2\n",
-       "2017-12-31     987.0\n",
+       "2017-01-31    1084.4\n",
+       "2017-02-28    1102.5\n",
+       "2017-03-31    1093.3\n",
+       "2017-04-30    1143.7\n",
+       "2017-05-31    1126.7\n",
+       "2017-06-30    1082.1\n",
+       "2017-07-31    1107.7\n",
+       "2017-08-31    1078.9\n",
+       "2017-09-30    1130.3\n",
+       "2017-10-31    1143.0\n",
+       "2017-11-30    1055.6\n",
+       "2017-12-31     958.7\n",
        "Name: Incidents/Month, dtype: float64"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,10 +724,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.ensemble import GradientBoostingRegressor\n",
+    "\n",
     "def gradient_boosting_model(train, steps):\n",
     "    \n",
     "    X_train, y_train = prepare_split_for_machine_learning(train)\n",
@@ -746,28 +751,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "2017-01-31    1072.554512\n",
-       "2017-02-28    1097.872309\n",
+       "2017-02-28    1096.297944\n",
        "2017-03-31    1073.290873\n",
        "2017-04-30    1139.654215\n",
-       "2017-05-31    1109.769417\n",
+       "2017-05-31    1105.838000\n",
        "2017-06-30    1112.457225\n",
-       "2017-07-31    1090.500255\n",
+       "2017-07-31    1089.977325\n",
        "2017-08-31    1098.314328\n",
-       "2017-09-30    1110.761310\n",
-       "2017-10-31    1137.316617\n",
-       "2017-11-30    1061.015572\n",
-       "2017-12-31     949.938162\n",
+       "2017-09-30    1113.004223\n",
+       "2017-10-31    1138.229903\n",
+       "2017-11-30    1053.601658\n",
+       "2017-12-31     964.742448\n",
        "Name: Incidents/Month, dtype: float64"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -785,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -819,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -833,6 +838,13 @@
    "source": [
     "forecast = ensemble_predict(train, 12)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
