--- a/Dashboard_UI.ipynb
+++ b/Dashboard_UI.ipynb
@@ -60,7 +60,7 @@
    "source": [
     "%%capture\n",
     "import nbimporter\n",
-    "from ensemble_model_2 import ensemble_predict"
+    "from Forecasting_Models import ensemble_predict"
    ]
   },
   {
@@ -440,7 +440,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "86073b348c814fff938693f0c41e4e4e",
+       "model_id": "86a0cbd28b5e4414b1e414d9bf2f7915",
        "version_major": 2,
        "version_minor": 0
       },
